--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 warp = "0.3.2"
-serde_json = "1.0.79"
-serde = "1.0.136"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
-[dev-dependencies]
-serde_derive = "1.0"
+#[dev-dependencies]
+#serde_derive = "1.0"
