--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+http = "0.2.8"
