--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,11 @@
 daemon            off;
-worker_processes  2;
+worker_processes 8;
+worker_cpu_affinity auto;
 user              www-data;
 
 events {
     use           epoll;
-    worker_connections  128;
+    worker_connections  4096;  ## Default: 1024
 }
 
 http {
